# Plasma

./: .gitmodules
.github/workflows/: ci.yml
Docs/ReleaseNotes/: ReleaseNotes.txt  TOS.txt
Scripts/: CMakeLists.txt
Scripts/Config/: nagus_config.ini  server.offline.ini
Scripts/Ports/python3/: portfile.cmake
Scripts/Python/: Personal.py  nagus_runner.py  nxusBookMachine.py
Scripts/Python/plasma/: Plasma.py  PlasmaConstants.py
Sources/Plasma/Apps/plClient/: CMakeLists.txt  plClient.cpp
Sources/Plasma/Apps/plClient/Mac-Cocoa/: PLSLoginWindowController.mm
Sources/Plasma/Apps/plClient/win32/: winmain.cpp
Sources/Plasma/Apps/plClient/win32/res/: plClient.rc
Sources/Plasma/Apps/plUruLauncher/: plClientLauncher.cpp  plClientLauncher.h
Sources/Plasma/CoreLib/: hsEndian.cpp  hsEndian.h  hsExpected.h
Sources/Plasma/FeatureLib/pfPatcher/: pfPatcher.cpp
Sources/Plasma/FeatureLib/pfPython/: cyAccountManagement.cpp  cyMisc.cpp  cyMisc.h  cyMiscGlue4.cpp  cyPythonInterface.cpp  cyPythonInterface.h  plPythonFileMod.cpp  pyAgeVault.cpp  pyJournalBookGlue.cpp  pyVault.cpp  pyVaultNode.cpp  pyVaultPlayerInfoListNode.cpp  pyVaultTextNoteNode.cpp
Sources/Plasma/NucleusLib/pnMessage/: plClientMsg.cpp
Sources/Plasma/NucleusLib/pnNetProtocol/: pnNpCommon.cpp
Sources/Plasma/PubUtilLib/plAgeLoader/: plAgeLoader.cpp  plAgeLoader.h  plResPatcher.cpp  plResPatcher.h
Sources/Plasma/PubUtilLib/plFile/: plSecureStream.cpp  plStreamSource.cpp
Sources/Plasma/PubUtilLib/plMessage/: plNetCommMsgs.h
Sources/Plasma/PubUtilLib/plNetClient/: plNetCliAgeJoiner.cpp  plNetClientMgr.cpp
Sources/Plasma/PubUtilLib/plNetClientComm/: plNetClientComm.cpp  plNetClientComm.h
Sources/Plasma/PubUtilLib/plNetGameLib/: Intern.h
Sources/Plasma/PubUtilLib/plNetGameLib/Private/: plNglAuth.cpp  plNglAuth.h  plNglCore.cpp  plNglCore.h  plNglFile.cpp  plNglGame.cpp  plNglGateKeeper.cpp
Sources/Plasma/PubUtilLib/plPipeline/: plDTProgressMgr.cpp
Sources/Plasma/PubUtilLib/plProgressMgr/: plProgressMgr.cpp  plProgressMgr.h
Sources/Plasma/PubUtilLib/plVault/: plVaultClientApi.cpp  plVaultClientApi.h
Sources/Tools/plFilePatcher/: plFilePatcher.cpp
